@@ -9,7 +9,6 @@ Open bugs:
 
 For the coming release:
 
-- add option to always use maximal symmetry
 - for face list tiling, restore to originally given symmetry
 
 =====================================================
